# AHA

./: .gitignore  AGENT.md  AGENTS.md  README.en.md  README.md  pyproject.toml
.githooks/: commit-msg
docs/: architecture.md  commit-convention.md  context-management.md  knowledge-base-plan.md  knowledge-capture-plan.md  optimization-plan.md  project-context-index-plan.md  protocol.md  repository-management.md  session-model.md  token-saving-context-planner.md  token-savings-plan.md  web-ui-optimization.md
examples/: simple_runner.sh
scripts/: build_onebin.py  cleanup_temp_runs.py  install_source_user_service.sh  install_user_service.sh  preflight_service_upgrade.py  smoke_dual_ui_homes.py  smoke_onebin_cli.py  smoke_playwright_ui.py  smoke_service_installers.py  smoke_workflow_ui_api.py
tests/: __init__.py  conftest.py  helpers.py  test_action_payloads.py  test_app_version.py  test_auto_context_compact.py  test_backend_registry.py  test_backend_runners.py  test_backend_runtime.py  test_chat_flow.py  test_chat_offsets.py  test_chat_prompt.py  test_chat_status.py  test_chat_supervision.py  test_cli.py  test_cli_core.py  test_codex_litellm_bridge.py  test_context_evidence.py  test_context_pressure.py  test_finalization_flow.py  test_frontend_static.py  test_game_routes.py  test_hardware_bridge.py  test_hardware_session.py  test_hardware_terminal.py  test_headroom_integration.py  test_knowledge.py  test_knowledge_capture.py  test_knowledge_cli.py  test_knowledge_distill.py  test_knowledge_general.py  test_knowledge_git.py  test_knowledge_navigation.py  (+50 more)
(+293 files in other folders)
