[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aha-cli"
version = "0.1.0"
description = "Agent-help-agent orchestration CLI prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AHA contributors" }
]
dependencies = []

[project.scripts]
aha = "aha_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aha_cli.web" = ["static/*"]
